Adding speed limit solution

--- a/Data_Puzzles_Speed_limit.ipynb
+++ b/Data_Puzzles_Speed_limit.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "V7VzFhVChVyv"
+      },
       "source": [
         "# Intro\n",
         "\n",
@@ -23,19 +12,16 @@
         "\n",
         "Can you figure out what the speed limit is for each road?\n",
         "Write back the sum of all roads speeds limits back on the data-puzzles webpage!"
-      ],
-      "metadata": {
-        "id": "V7VzFhVChVyv"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Kickstart"
-      ],
       "metadata": {
         "id": "rm2wLbJjhlXW"
-      }
+      },
+      "source": [
+        "# Kickstart"
+      ]
     },
     {
       "cell_type": "code",
@@ -52,9 +38,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "speeds_df.head()"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -63,19 +47,9 @@
         "id": "NkxjKHg3hwLE",
         "outputId": "617d6561-9b7f-47b6-b38f-84a6745f5a1d"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "      plate road  speed\n",
-              "0  DN9166SU  R87   49.7\n",
-              "1  CG4862ZS  R87   49.4\n",
-              "2  DV4956AM  R87   49.9\n",
-              "3  TL4125OA  R87   51.3\n",
-              "4  LX3827BI  R87   48.1"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-efd46b5e-4e46-4f62-9f6d-9174b49e0c4b\">\n",
@@ -213,60 +187,93 @@
               "    </div>\n",
               "  </div>\n",
               "  "
+            ],
+            "text/plain": [
+              "      plate road  speed\n",
+              "0  DN9166SU  R87   49.7\n",
+              "1  CG4862ZS  R87   49.4\n",
+              "2  DV4956AM  R87   49.9\n",
+              "3  TL4125OA  R87   51.3\n",
+              "4  LX3827BI  R87   48.1"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "speeds_df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your turn now! figure out the speed limit per road and add them up!"
-      ],
+      "execution_count": 43,
       "metadata": {
         "id": "1mh7sFA1hxEH"
       },
-      "execution_count": 43,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Your turn now! figure out the speed limit per road and add them up!"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "np.sum([round(np.percentile(speeds_df.loc[speeds_df['road']==road, 'speed'], 90), -1) for road in speeds_df['road'].unique()])"
-      ],
+      "execution_count": 42,
       "metadata": {
-        "id": "rTl5hJD_bKZm",
-        "outputId": "7266e866-0a5a-43f5-ff04-d7b75a77d21a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rTl5hJD_bKZm",
+        "outputId": "7266e866-0a5a-43f5-ff04-d7b75a77d21a"
       },
-      "execution_count": 42,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "470.0"
             ]
           },
+          "execution_count": 42,
           "metadata": {},
-          "execution_count": 42
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "np.sum([round(np.percentile(speeds_df.loc[speeds_df['road']==road, 'speed'], 90), -1) for road in speeds_df['road'].unique()])"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "UxPjJWdxYiTr"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.8 (default, Feb 24 2021, 15:54:32) [MSC v.1928 64 bit (AMD64)]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "b826f3cc26bf261a738aa395db11ba18e8611ccc2b857b4784f1b9cd0f0298be"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
