--- a/Data_Puzzles_Speed_limit.ipynb
+++ b/Data_Puzzles_Speed_limit.ipynb
@@ -244,7 +244,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.8"
+      "version": "3.8.8 (default, Feb 24 2021, 15:54:32) [MSC v.1928 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
